<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TicketDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:background="@drawable/blue_bg_bottom_corner"
                android:layout_height="135dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/world_half" />

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Ticker Detail"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                    app:layout_constraintStart_toEndOf="@+id/backBtn"
                    app:layout_constraintTop_toTopOf="@+id/backBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"

                android:background="@drawable/white_bg"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/time"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/logo"
                        app:layout_constraintStart_toStartOf="@+id/logo"
                        app:layout_constraintTop_toBottomOf="@+id/logo" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/logo"
                        app:srcCompat="@drawable/line_airple_blue" />

                    <TextView
                        android:id="@+id/fromTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@+id/fromShortTxt"
                        app:layout_constraintEnd_toStartOf="@+id/imageView11"
                        app:layout_constraintHorizontal_bias="0.514"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/time"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/fromShortTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:text="@string/fromShort"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintEnd_toEndOf="@+id/fromTxt"
                        app:layout_constraintStart_toStartOf="@+id/fromTxt"
                        app:layout_constraintTop_toBottomOf="@+id/fromTxt" />

                    <TextView
                        android:id="@+id/ToTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toTopOf="@+id/toShortTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView11"
                        app:layout_constraintTop_toBottomOf="@+id/time" />

                    <TextView
                        android:id="@+id/toShortTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toShort"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintEnd_toEndOf="@+id/ToTxt"
                        app:layout_constraintStart_toStartOf="@+id/ToTxt"
                        app:layout_constraintTop_toBottomOf="@+id/ToTxt" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="From"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/fromSmallTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Date"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/dateTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="To"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/toSmallTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Time"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/timeTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Class"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/classTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Seats"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/seatTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Airlines"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/airlineTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="Price"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/priceTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/qrcode" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/dash_line" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="24dp"
                    app:srcCompat="@drawable/barcode" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadTicketBtn"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/blue_bg"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Download Ticket" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>